[gd_scene load_steps=3 format=3 uid="uid://d3h72gjfyaglm"]

[ext_resource type="Script" path="res://Scenes/GameOver/gameOver.gd" id="1_qv18g"]
[ext_resource type="LabelSettings" uid="uid://dnm6u3j3erlrl" path="res://assets/LG_48_RED.tres" id="2_ets7f"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qv18g")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.201042
anchor_top = 0.466042
anchor_right = 0.798958
anchor_bottom = 0.534455
offset_bottom = -0.42453
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00732)
text = "Game Over"
label_settings = ExtResource("2_ets7f")
metadata/_edit_use_anchors_ = true

[node name="PressJumpLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.183333
anchor_top = 0.466042
anchor_right = 0.816667
anchor_bottom = 0.533958
offset_left = 132.0
offset_top = 17.5
offset_right = -132.0
offset_bottom = -17.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Jump"
label_settings = ExtResource("2_ets7f")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
